 * Added support for second wire interface (Constructor postfix 2ND_HW_I2C)
 * Added support for UC1611 (EA DOGM240 and EA DOGXL240, issue 66)
2016-11-28	v2.7.5	 olikraus@gmail.com
  * Added support for 0.66" 64x48 SSD1306 OLED (issue 89)
  * Support for UC1608 (issue 92)
  * Speed improvements for SW SPI und 8080 mode (issues 87, 90 and 95)
  * Fixed issue with ST7920 not using the optimized SW SPI procedures (issue 87)
  * Direct buffer API (issue 93)
2016-12-11	v2.8.4	 olikraus@gmail.com
  * Increased contrast range for SSD1306 (issue 98)
  * Support for KS0108 (issue 88)
  * Support for UC1608 240x128 (issue 101)
  * Speed improvement (issue 96)
2016-12-12	v2.8.5	 olikraus@gmail.com
  * Bugfix for issue 96 (issue 106)
2016-12-20	v2.9.1	 olikraus@gmail.com
  * Speed improvement for AVR/KS0108 (issue 104)
  * Support for UC1604 (issue 111)
  * Support for PCD8544/Nokia Display (issue 107)
  * Change/fixed behavior of userInterfaceSelectionList (issue 112)
2016-12-23	v2.9.2	 olikraus@gmail.com
  * Reverted the setup for SSD1306_NONAME to the original setup (undo issue 98)
  * Introduced SSD1306_VCOMH0 for the max range setup (issue 116)
2016-12-30	v2.10.1	 olikraus@gmail.com
  * ST7565 LM6059 Display (issue 123)
  * SSD1606 eInk/ePaper Display (issue 100)
  * Documentation updates
2017-01-08	v2.11.4	 olikraus@gmail.com
  * Support for LC7981 (issue 134)
  * Support for PCF8812 (issue 135)
  * Fixed wrong half-move notation in Little Rook Chess (issue 137)
  * Support for ST7567, Pax Instruments GLCD Shield (issue 138)
  * Support for NT7534 (issue 143)
  * Support for SSD1327, Seeedstudio OLED (issue 145)
  * Support for SSD1305 (issue 146)
  * Support for DOGM132 (issue 147)
  * Fixed a bug in the draw pixel procedure which appears in full buffer mode,
    if the display width is not a multiple of 8 (issue 148)
  * Added XOR mode (setDrawColor 2, issue 56)
2017-01-xx	v2.12.x	  olikraus@gmail.com
  * Support for SSD1309 (issue 113)
  